--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <!-- About Section -->
     <section id="about" class="section reveal">
       <h2 id="HoverEffect" data-key="about_title">About Me</h2>
-      <p data-key="about_desc">
-        I am a developer who loves creating unique and engaging experiences. I
-        specialize in Unity, game design, and web development.
-      </p>
+      <p data-key="about_desc">description</p>
+      <p data-key="about_desc2">description</p>
+      <p data-key="about_desc3">description</p>
+      <p data-key="about_desc4">description</p>
     </section>
 
     <!-- Projects Section -->
