project screen testing

--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
     <div id="projectOverlay" class="project-overlay">
       <h2 id="overlayTitle">Project Title</h2>
 
+      <h3>About</h3>
+      <h3>Details</h3>
+
+      
       <div class="overlay-content">
         <img id="overlayImage" src="" alt="" />
         <p id="overlayDesc" data-key="project_desc"></p>
@@ -104,6 +108,7 @@
           <button onclick="closeProject()">Close</button>
         </div>
       </div>
+
     </div>
 
     <div class="options" id="optionsBox">
