--- a/index.html
+++ b/index.html
@@ -97,18 +97,12 @@
       <h3>About</h3>
       <h3>Details</h3>
 
-      
-      <div class="overlay-content">
-        <img id="overlayImage" src="" alt="" />
-        <p id="overlayDesc" data-key="project_desc"></p>
+      <div class="overlay-content" id ="overlay-content">
 
-        <p><strong>Tools:</strong> <span id="overlayTools"></span></p>
-
-        <div class="overlay-buttons">
+        <div class="bottom-bar">
           <button onclick="closeProject()">Close</button>
         </div>
       </div>
-
     </div>
 
     <div class="options" id="optionsBox">
