--- a/index.html
+++ b/index.html
@@ -65,6 +65,12 @@
       </div>
     </section>
 
+    <!-- Current Work -->
+     <section id="currentWork" class="section reveal">
+      <h2 data-key="WorkTitle"></h2>
+      <p data-key="WorkContent"></p>
+     </section>
+
     <!-- Contact Section -->
     <section id="contact" class="section reveal">
       <h2 data-key="contact_title">Contact</h2>
