--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
       <h2 data-key="projects_title">Projects</h2>
       <div class="project-grid">
         <button class="project-card" onclick="openProject('AXERAS')">
-          <h3 data-key="project1_title">Project One</h3>
+          <h1 data-key="project1_title">Project One</h1>
           <p data-key="project1_desc">A brief description of this project.</p>
+          <br><img src="Images/AXERAS/Axeras.jpg" width=75%>
         </button>
 
         <button class="project-card" onclick="openProject('VirtualEscape')">
-          <h3 data-key="project2_title">Project Two</h3>
+          <h1 data-key="project2_title">Project Two</h1>
           <p data-key="project2_desc">A brief description of this project.</p>
+          <br><img src="Images/VirtualEscape/MainMenu.png" width=75%>
         </button>
       </div>
     </section>
