updates on visual

--- a/index.html
+++ b/index.html
@@ -50,24 +50,24 @@
         <div class="timeline-h-item">
           <div class="dot"></div>
           <div class="card">
-            <h3>202301</h3>
-            <p>Studied at UTAR</p>
+            <h3>Jan2023</h3>
+            <p data-key="card01">Studied at UTAR</p>
           </div>
         </div>
 
         <div class="timeline-h-item">
           <div class="dot"></div>
           <div class="card">
-            <h3>202506 - 202510</h3>
-            <p>Internship at <br>Inverse Atelier</p>
+            <h3>June2025 - Oct2025</h3>
+            <p data-key="card02">Internship at <br>Inverse Atelier</p>
           </div>
         </div>
 
         <div class="timeline-h-item">
           <div class="dot"></div>
           <div class="card">
-            <h3>202602</h3>
-            <p>Graduated from UTAR</p>
+            <h3>Feb2026</h3>
+            <p data-key="card03">Graduated from UTAR</p>
           </div>
         </div>
       </div>
