--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <p data-key="hero_desc">
         I create games, interactive experiences, and websites.
       </p>
-      <a href="#projects" class="btn" data-key="view_work">View My Work</a>
+      <a href="#PDFs" class="btn" data-key="view_work"></a>
     </section>
 
     <!-- About Section -->
