--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="timeline-h-item">
           <div class="dot"></div>
           <div class="card">
-            <h3>June2025 - Oct2025</h3>
+            <h3>Jun2025 - Oct2025</h3>
             <p data-key="card02">Internship at <br>Inverse Atelier</p>
           </div>
         </div>
